Fixed spacing issues and responsiveness

--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -50,9 +50,7 @@ footer .social-contact a:hover {
   color: var(--secondary-color);
   background: var(--primary-color);
 }
-p .content  {
- font-size: 24px;
-}
+
 .contact a{
   text-decoration: none;
   color: black;
@@ -160,8 +158,10 @@ p .content  {
   font-size: 40px;
   color: var(--primary-color); 
 }
-.tiny {
+.tiny a {
+  font-size: 24px;
   color:  var(--primary-color);
+  text-decoration: none;
 }
 @media (max-width: 760px) {
   .hero h1 {
@@ -183,18 +183,20 @@ p .content  {
   .title {
     font-size: 40px;
   }
-  .title {
-    font-size: 24
-    ;
+  .title2 {
+    font-size: 16;
   }
-  .email-contact a{
-    font-size: 18px;
+    .email-contact a{
+    font-size: 20px;
   }
-  .content {
+  p {
     font-size: 16px;
   }
   .contact p{
     font-size: 16px;
+  }
+  .col-content {
+    padding: 0;
   }
   .btn-about {
     font-size: 16px;
